compiler/tests/compile-fail/arity.arret
(import [arret base])

(defn not-enough-fixed (_) ())
(def _ (not-enough-fixed))
      ;^^^^^^^^^^^^^^^^^^ ERROR insufficient arguments: wanted 1, have 0

(defn not-enough-fixed-and-rest (_ _ ...) ())
(def _ (not-enough-fixed-and-rest))
      ;^^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR insufficient arguments: wanted at least 1, have 0

(defn too-many-fixed (_) ())
(def _ (too-many-fixed 1 2 3))
      ;^^^^^^^^^^^^^^^^^^^^^^ ERROR too many arguments: wanted 1, have 3

(def _ (bool?))
      ;^^^^^^^ ERROR insufficient arguments: wanted 1, have 0

(def _ (bool? true true))
      ;^^^^^^^^^^^^^^^^^ ERROR too many arguments: wanted 1, have 2

(defn apply-top-fun ([x : (... -> Bool)])
  (x 5))
 ;^^^^^ ERROR cannot determine parameter types for top function type `(... -> Bool)`

 (defn apply-with-spread (_ [_ : Int] _))
 (def _ (apply-with-spread '(1 2) ...))
                           ;^^^^^ ERROR `(List Int Int)` is not a `(List Any Int Any)`
 (def _ (apply-with-spread '(1 2 3 4) ...))
                           ;^^^^^^^^^ ERROR `(List Int Int Int Int)` is not a `(List Any Int Any)`
